--- a/trunk/TestESBQ/nbproject/project.properties
+++ b/trunk/TestESBQ/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/TestESBQ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jdom-2.0.5.jar=..\\TestESB\\jdom-2.0.5.jar
+file.reference.jdom-2.0.5.jar=C:\\Users\\julie\\Documents\\NetBeansProjects\\TestESB\\jdom-2.0.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
