--- a/trunk/TestESBQ/nbproject/project.properties
+++ b/trunk/TestESBQ/nbproject/project.properties
@@ -29,11 +29,19 @@ dist.jar=${dist.dir}/TestESBQ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-cli-1.1.jar=/home/alpha/NetBeansProjects/rabbitmq-java-client-bin-3.4.3/commons-cli-1.1.jar
+file.reference.commons-io-1.2.jar=/home/alpha/NetBeansProjects/rabbitmq-java-client-bin-3.4.3/commons-io-1.2.jar
 file.reference.jdom-2.0.5.jar=jdom-2.0.5.jar
+file.reference.rabbitmq-client-tests.jar=/home/alpha/NetBeansProjects/rabbitmq-java-client-bin-3.4.3/rabbitmq-client-tests.jar
+file.reference.rabbitmq-client.jar=/home/alpha/NetBeansProjects/rabbitmq-java-client-bin-3.4.3/rabbitmq-client.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jdom-2.0.5.jar}
+    ${file.reference.jdom-2.0.5.jar}:\
+    ${file.reference.commons-cli-1.1.jar}:\
+    ${file.reference.commons-io-1.2.jar}:\
+    ${file.reference.rabbitmq-client-tests.jar}:\
+    ${file.reference.rabbitmq-client.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
