--- a/TestESBQ/nbproject/project.properties
+++ b/TestESBQ/nbproject/project.properties
@@ -38,7 +38,11 @@ file.reference.rabbitmq-client.jar=/home/belliot/Documents/rabbitMQ/rabbitmq-jav
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jdom-2.0.5.jar}
+    ${file.reference.jdom-2.0.5.jar}:\
+    ${file.reference.commons-cli-1.1.jar}:\
+    ${file.reference.commons-io-1.2.jar}:\
+    ${file.reference.rabbitmq-client-tests.jar}:\
+    ${file.reference.rabbitmq-client.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
