--- a/trunk/TestESBQ/nbproject/project.properties
+++ b/trunk/TestESBQ/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/TestESBQ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-cli-1.1.jar=/home/belliot/Documents/rabbitMQ/rabbitmq-java-client-bin-3.4.3/commons-cli-1.1.jar
-file.reference.commons-io-1.2.jar=/home/belliot/Documents/rabbitMQ/rabbitmq-java-client-bin-3.4.3/commons-io-1.2.jar
+file.reference.commons-cli-1.1.jar=lib/commons-cli-1.1.jar
+file.reference.commons-io-1.2.jar=lib/commons-io-1.2.jar
 file.reference.jdom-2.0.5.jar=jdom-2.0.5.jar
 file.reference.junit-4.12.jar=/home/belliot/T\u00e9l\u00e9chargements/junit-4.12.jar
-file.reference.rabbitmq-client-tests.jar=/home/belliot/Documents/rabbitMQ/rabbitmq-java-client-bin-3.4.3/rabbitmq-client-tests.jar
-file.reference.rabbitmq-client.jar=/home/belliot/Documents/rabbitMQ/rabbitmq-java-client-bin-3.4.3/rabbitmq-client.jar
+file.reference.rabbitmq-client-tests.jar=lib/rabbitmq-client-tests.jar
+file.reference.rabbitmq-client.jar=lib/rabbitmq-client.jar
 includes=**
 jar.compress=false
 javac.classpath=\
