--- a/webService/ConsumerProvider/Provider/nbproject/project.properties
+++ b/webService/ConsumerProvider/Provider/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -23,18 +24,30 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
+file.reference.commons-cli-1.1.jar=C:\\Users\\samsung\\Documents\\NetBeansProjects\\esbProject\\TestESBQ\\lib\\commons-cli-1.1.jar
+file.reference.commons-io-1.2.jar=C:\\Users\\samsung\\Documents\\NetBeansProjects\\esbProject\\TestESBQ\\lib\\commons-io-1.2.jar
+file.reference.rabbitmq-client-tests.jar=C:\\Users\\samsung\\Documents\\NetBeansProjects\\esbProject\\TestESBQ\\lib\\rabbitmq-client-tests.jar
+file.reference.rabbitmq-client.jar=C:\\Users\\samsung\\Documents\\NetBeansProjects\\esbProject\\TestESBQ\\lib\\rabbitmq-client.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/endorsed/webservices-api.jar:${j2ee.server.home}/lib/javaee.jar:${j2ee.server.home}/lib/jsf-impl.jar:${j2ee.server.home}/lib/activation.jar:${j2ee.server.home}/lib/appserv-tags.jar:${j2ee.server.home}/lib/mail.jar:${j2ee.server.home}/lib/appserv-jstl.jar:${j2ee.server.home}/lib/webservices-tools.jar:${j2ee.server.home}/lib/webservices-rt.jar:${j2ee.server.home}/lib/webservices-tools.jar:${j2ee.server.home}/lib/webservices-rt.jar:${j2ee.server.home}/lib/appserv-ws.jar:${j2ee.server.home}/lib/asm-3.1.jar:${j2ee.server.home}/lib/jersey-bundle-1.0.3.1.jar:${j2ee.server.home}/lib/jettison-1.0.1.jar:${j2ee.server.home}/lib/jsr311-api-1.0.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}/lib/endorsed/webservices-api.jar:${j2ee.server.home}/lib/j2ee.jar:${j2ee.server.home}/lib/saaj-api.jar:${j2ee.server.home}/lib/saaj-impl.jar:${j2ee.server.home}/lib/jaxrpc-api.jar:${j2ee.server.home}/lib/jaxrpc-impl.jar:${j2ee.server.home}/lib/endorsed/jaxp-api.jar:${j2ee.server.home}/lib/appserv-ws.jar:${j2ee.server.home}/lib/webservices-tools.jar:${j2ee.server.home}/lib/webservices-rt.jar
+j2ee.platform.classpath=${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
 j2ee.platform.wsit.classpath=
-j2ee.server.type=J2EE
+j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-cli-1.1.jar}:\
+    ${file.reference.commons-io-1.2.jar}:\
+    ${file.reference.rabbitmq-client-tests.jar}:\
+    ${file.reference.rabbitmq-client.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -61,7 +74,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
