--- a/trunk/TestESBQ/nbproject/project.properties
+++ b/trunk/TestESBQ/nbproject/project.properties
@@ -27,7 +27,8 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TestESBQ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${libs.JAX-WS-ENDORSED.classpath}
 excludes=
 file.reference.commons-cli-1.1.jar=lib/commons-cli-1.1.jar
 file.reference.commons-io-1.2.jar=lib/commons-io-1.2.jar
