--- a/trunk/TestESBQ/nbproject/project.properties
+++ b/trunk/TestESBQ/nbproject/project.properties
@@ -32,7 +32,9 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-cli-1.1.jar=lib/commons-cli-1.1.jar
 file.reference.commons-io-1.2.jar=lib/commons-io-1.2.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
 file.reference.jdom-2.0.5.jar=jdom-2.0.5.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.junit-4.12.jar=/home/belliot/T\u00e9l\u00e9chargements/junit-4.12.jar
 file.reference.rabbitmq-client-tests.jar=lib/rabbitmq-client-tests.jar
 file.reference.rabbitmq-client.jar=lib/rabbitmq-client.jar
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.commons-cli-1.1.jar}:\
     ${file.reference.commons-io-1.2.jar}:\
     ${file.reference.rabbitmq-client-tests.jar}:\
-    ${file.reference.rabbitmq-client.jar}
+    ${file.reference.rabbitmq-client.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
